--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>硫没有正七价的Wiki</title>
+  <link rel="stylesheet" href="css/style.css" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <meta name="description" content="Description">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
@@ -20,29 +21,30 @@
 
   <link href="_themes/prism/prism-one-light.css" rel="stylesheet" />
 </head>
+
 <body>
-  <div id="app"></div>
+  <!-- <div id="app"></div> -->
+  <div id="app">🏃‍🏃‍🏃‍💨加载中...</div>
 
   <script>
-    document.body.oncopy = function () {
-      swal("复制成功 😻",
-              "若要转载或引用请务必保留原文链接，并申明来源。如果你觉得本仓库不错，那就来 GitHub 给个 Star 吧 ??   - by WJJ",
-              "success"); };
-
     window.$docsify = {
       name: '硫没有正七价',
       repo: 'https://github.com/wendaidai',
       loadSidebar: true, // 增加：自动加载侧边栏
       loadNavbar: true, // 加载导航栏
       mergeNavbar: true, // 小屏设备下合并导航栏到侧边栏
+      coverpage: true, // 封面
+      auto2top: true,
       search: {
         noData: {
-          '/': 'Sorry, No Result!'
+          '/': '😒 Sorry, No Result!'
         },
         paths: 'auto',
         placeholder: {
-          '/': 'Search'
-        }
+          '/': '🔍 Search'
+        },
+        depth: 6,
+        maxAge: 86400000,
       },
       copyCode: {
         buttonText : 'Copy',
@@ -79,6 +81,22 @@
       //   headings: 'h1, h2, h3, h4, h5, h6',
       //   title: 'Table of Contents',
       // },
+      // 回到顶部
+      scrollToTop: {
+        auto: true,
+        text: '🔼',
+        right: 17,
+        bottom: 80,
+        offset: 100
+      },
+      // 页脚
+      footer: {
+        copy: '<span>Copyright &copy; 20222 &nbsp 💖 &nbsp</span>',
+        copy: '<span id="sitetime"></span> <br/> <span>Copyright &copy; 2022 &nbsp 💖 &nbsp</span>',
+        auth: ' <strong><a href="https://github.com/wendaidai" target="_blank">Mr.WJJ</a></strong>',
+        pre: '<hr/>',
+        style: 'font-size: 18px; text-align: center;',
+      },
     }
   </script>
 
@@ -119,5 +137,59 @@
   <!-- <script src="https://unpkg.com/docsify-toc@1.0.0/dist/toc.js"></script> -->
   <!-- mouse click -->
   <script src="//cdn.jsdelivr.net/gh/jerryc127/butterfly_cdn@2.1.0/js/click_heart.js"></script>
+  <!-- 回到顶部 -->
+  <script src="//unpkg.com/docsify-scroll-to-top/dist/docsify-scroll-to-top.min.js"></script>
+  <!-- 页脚 -->
+  <script src="//unpkg.com/docsify-footer-enh/dist/docsify-footer-enh.min.js"></script>
+
+  <!-- 添加网站运行时间统计 -->
+  <script language=javascript>
+  function siteTime() {
+    window.setTimeout("siteTime()", 1000);
+    var seconds = 1000;
+    var minutes = seconds * 60;
+    var hours = minutes * 60;
+    var days = hours * 24;
+    var years = days * 365;
+    var today = new Date();
+    var todayYear = today.getFullYear();
+    var todayMonth = today.getMonth() + 1;
+    var todayDate = today.getDate();
+    var todayHour = today.getHours();
+    var todayMinute = today.getMinutes();
+    var todaySecond = today.getSeconds();
+    /* Date.UTC() -- 返回date对象距世界标准时间(UTC)1970年1月1日午夜之间的毫秒数(时间戳)
+    year - 作为date对象的年份，为4位年份值
+    month - 0-11之间的整数，做为date对象的月份
+    day - 1-31之间的整数，做为date对象的天数
+    hours - 0(午夜24点)-23之间的整数，做为date对象的小时数
+    minutes - 0-59之间的整数，做为date对象的分钟数
+    seconds - 0-59之间的整数，做为date对象的秒数
+    microseconds - 0-999之间的整数，做为date对象的毫秒数 */
+
+    /* 建站时间 */
+    var t1 = Date.UTC(2022, 07, 08, 00, 00, 00); 
+    var t2 = Date.UTC(todayYear, todayMonth, todayDate, todayHour, todayMinute, todaySecond);
+    var diff = t2 - t1;
+    var diffYears = Math.floor(diff / years);
+    var diffDays = Math.floor((diff / days) - diffYears * 365);
+    var diffHours = Math.floor((diff - (diffYears * 365 + diffDays) * days) / hours);
+    var diffMinutes = Math.floor((diff - (diffYears * 365 + diffDays) * days - diffHours * hours) / minutes);
+    var diffSeconds = Math.floor((diff - (diffYears * 365 + diffDays) * days - diffHours * hours - diffMinutes * minutes) / seconds);
+    document.getElementById("sitetime").innerHTML = " 本站已安全运行 " + diffYears + " 年 " + diffDays + " 天 " + diffHours + " 小时 " + diffMinutes + " 分 " + diffSeconds + " 秒 ";
+}
+  siteTime();
+  </script>
+  <!--  复制提醒-->
+  <script src="https://cdn.bootcss.com/sweetalert/1.1.3/sweetalert.min.js"></script>
+  <script>
+    document.body.oncopy = function () {
+      swal("复制成功 😆",
+              "若要转载或引用请务必保留原文链接，并申明来源。如果你觉得本仓库不错，那就来 GitHub 给个 Star 吧 🌹 -- by WJJ",
+              "success"); };
+  </script>
+  <!-- 访问量统计 -->
+  <script async src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script>
 </body>
+
 </html>
