--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       repo: 'https://github.com/wendaidai',
       loadSidebar: true, // 增加：自动加载侧边栏
       loadNavbar: true, // 加载导航栏
-      mergeNavbar: true, // 小屏设备下合并导航栏到侧边栏
+      // mergeNavbar: true, // 小屏设备下合并导航栏到侧边栏
       coverpage: true, // 封面
       auto2top: true,
       // logo: '/_media/mvp.png',
