--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>硫没有正七价</title>
+  <link rel="shortcut icon" href="ice.png">
+
   <link rel="stylesheet" href="css/custom.css" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <meta name="description" content="Description">
@@ -222,9 +224,9 @@
   <script>
     document.addEventListener("visibilitychange", function () {
             if (document.hidden) {
-                document.title="人呢~人呢~";
+                document.title="人呢 赶紧回来";
             } else  {
-                document.title="(ㄏ￣▽￣)贴贴~";
+                document.title="贴贴~";
                 setTimeout(function(){
                     document.title= "硫没有正七价";
                 }, 2000);
