--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <!-- <div id="app"></div> -->
   <div id="app">🏃‍🏃‍🏃‍💨加载中...</div>
 
-  <script>
+  <script >
     window.$docsify = {
       name: '硫没有正七价',
       repo: 'https://github.com/wendaidai',
@@ -224,7 +224,7 @@
   <script>
     document.addEventListener("visibilitychange", function () {
             if (document.hidden) {
-                document.title="人呢 赶紧回来";
+                document.title="人呢? 赶紧回来!";
             } else  {
                 document.title="贴贴~";
                 setTimeout(function(){
