--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
   <meta charset="UTF-8">
   <title>硫没有正七价</title>
   <link rel="shortcut icon" href="ice.png">
+  <!-- switch -->
+  <!-- <link 
+  rel="stylesheet"
+  href="//cdn.jsdelivr.net/npm/docsify-darklight-theme@latest/dist/style.min.css"
+  title="docsify-darklight-theme"
+  type="text/css"
+  /> -->
   <link rel="stylesheet" href="css/custom.css" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <meta name="description" content="Description">
@@ -19,7 +26,7 @@
   <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/docsify-sidebar-collapse/dist/sidebar.min.css" />
   <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/docsify-sidebar-collapse/dist/sidebar-folder.min.css" />
   <!-- 目录跳转 -->
-  <!-- <link rel="stylesheet" href="https://unpkg.com/docsify-toc@1.0.0/dist/toc.css"> -->
+  <link rel="stylesheet" href="https://unpkg.com/docsify-toc@1.0.0/dist/toc.css">
   <!-- 复制提醒 -->
   <link rel="stylesheet" href="https://cdn.bootcss.com/sweetalert/1.1.3/sweetalert.min.css" type='text/css' media='all' />
 
@@ -32,7 +39,7 @@
 
   <script >
     window.$docsify = {
-      name: '硫没有正七价',
+      name: '💦硫没有正七价',
       repo: 'https://github.com/wendaidai',
       loadSidebar: true, // 增加：自动加载侧边栏
       loadNavbar: true, // 加载导航栏
@@ -266,6 +273,14 @@
       }
     });
   </script>
+  <!-- switch between day and night -->
+  <!-- <script 
+  src="//cdn.jsdelivr.net/npm/docsify-darklight-theme@latest/dist/index.min.js"
+  type="text/javascript">
+  </script> -->
+  <!-- 目录 -->
+  <script src="https://unpkg.com/docsify-toc@1.0.0/dist/toc.js"></script>
+
 </body>
 
 </html>
