--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
   title="docsify-darklight-theme"
   type="text/css"
   /> -->
+  <!-- highlight -->
+  <!-- <link rel="stylesheet"
+      href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/11.5.1/styles/default.min.css"> -->
+  <!-- 代码块行号 -->
+  <script src="https://cdn.jsdelivr.net/gh/spite-triangle/docsify-codeLineNum/css/codeLineNum.css"></script>
   <link rel="stylesheet" href="css/custom.css" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <meta name="description" content="Description">
@@ -160,6 +165,7 @@
   <script src="//unpkg.com/prismjs/components/prism-clike.js"></script>
   <script src="//unpkg.com/prismjs/components/prism-cpp.js"></script>
   <script src="//unpkg.com/prismjs/components/prism-bash.js"></script>
+  <!-- <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/11.5.1/highlight.min.js"></script> -->
   <!-- code copy -->
   <script src="//cdn.jsdelivr.net/npm/docsify-copy-code"></script>
   <!-- 分页导航 -->
@@ -284,7 +290,8 @@
   <script src="/js/sakura.js"></script>
   <!-- line -->
   <script src="/js/line.js"></script>
-
+  <!-- 代码块行号 -->
+  <script src="https://cdn.jsdelivr.net/gh/spite-triangle/docsify-codeLineNum/script/codeLineNum.min.js"></script>
 </body>
 
 </html>
