--- a/index.html
+++ b/index.html
@@ -285,9 +285,9 @@
   <!-- 目录 -->
   <script src="https://unpkg.com/docsify-toc@1.0.0/dist/toc.js"></script>
   <!-- 樱花 -->
-  <script src="/js/sakura.js"></script>
+  <script src="js/sakura.js"></script>
   <!-- line -->
-  <script src="/js/line.js"></script>
+  <script src="js/line.js"></script>
 </body>
 
 </html>
