--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
   <!-- 樱花 -->
   <script src="js/sakura.js"></script>
   <!-- line -->
-  <script src="js/line.js"></script>
+  <!-- <script src="js/line.js"></script> -->
 </body>
 
 </html>
