--- a/index.html
+++ b/index.html
@@ -120,27 +120,27 @@
         title: '目录',
       },
 
-      plugins: [
-        /*来必力评论*/
-        function (hook, vm) {
-          // load livere
-          hook.beforeEach(function(content) {
-            var comment = "<div id='lv-container' data-id='city' data-uid='MTAyMC80MzA4MC8xOTYyNg=='></div>\n\n----\n"
-            return content + comment;
-          });
+      // plugins: [
+      //   /*来必力评论*/
+      //   function (hook, vm) {
+      //     // load livere
+      //     hook.beforeEach(function(content) {
+      //       var comment = "<div id='lv-container' data-id='city' data-uid='MTAyMC80MzA4MC8xOTYyNg=='></div>\n\n----\n"
+      //       return content + comment;
+      //     });
 
-          hook.doneEach(function() {
-            (function(d, s) {
-              var j, e = d.getElementsByTagName(s)[0];
-              if (typeof LivereTower === 'function') { return; }
-              j = d.createElement(s);
-              j.src = 'https://cdn-city.livere.com/js/embed.dist.js';
-              j.async = true;
-              e.parentNode.insertBefore(j, e);
-            })(document, 'script');
-          });
-        },
-      ]
+      //     hook.doneEach(function() {
+      //       (function(d, s) {
+      //         var j, e = d.getElementsByTagName(s)[0];
+      //         if (typeof LivereTower === 'function') { return; }
+      //         j = d.createElement(s);
+      //         j.src = 'https://cdn-city.livere.com/js/embed.dist.js';
+      //         j.async = true;
+      //         e.parentNode.insertBefore(j, e);
+      //       })(document, 'script');
+      //     });
+      //   },
+      // ]
     }
   </script>
 
