--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <!-- 目录跳转 -->
   <link rel="stylesheet" href="https://unpkg.com/docsify-toc@1.0.0/dist/toc.css">
   <!-- 复制提醒 -->
-  <link rel="stylesheet" href="https://cdn.bootcss.com/sweetalert/1.1.3/sweetalert.min.css" type='text/css' media='all' />
+  <!-- <link rel="stylesheet" href="https://cdn.bootcss.com/sweetalert/1.1.3/sweetalert.min.css" type='text/css' media='all' /> -->
 
   <link href="_themes/prism/prism-one-light.css" rel="stylesheet" />
 </head>
@@ -145,7 +145,7 @@
   </script>
 
   <!-- 复制提醒 -->
-  <script src="//i2.wp.com/cdn.bootcss.com/sweetalert/1.1.3/sweetalert.min.js"></script>
+  <!-- <script src="//i2.wp.com/cdn.bootcss.com/sweetalert/1.1.3/sweetalert.min.js"></script> -->
   <!-- Docsify v4 -->
   <script src="//cdn.jsdelivr.net/npm/docsify@4"></script>
   <!-- CDN files for docsify-katex -->
@@ -226,13 +226,13 @@
   siteTime();
   </script>
   <!--  复制提醒-->
-  <script src="https://cdn.bootcss.com/sweetalert/1.1.3/sweetalert.min.js"></script>
+  <!-- <script src="https://cdn.bootcss.com/sweetalert/1.1.3/sweetalert.min.js"></script>
   <script>
     document.body.oncopy = function () {
       swal("复制成功 😆",
               "若要转载或引用请务必保留原文链接，并申明来源。如果你觉得本仓库不错，那就来 GitHub 给个 Star 吧 🌹 -- by WJJ",
               "success"); };
-  </script>
+  </script> -->
   <!-- 访问量统计 -->
   <script async src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script>
   <!-- share -->
