--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
       },
       'flexible-alerts': {
         style: 'flat'
+        // style: 'callout'
       },
       // toc: {
       //   scope: '.markdown-section',
@@ -154,11 +155,11 @@
   <script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/search.min.js"></script>
   <script src="//cdn.jsdelivr.net/npm/docsify-sidebar-collapse/dist/docsify-sidebar-collapse.min.js"></script>
   <!-- highlight -->
-  <script src="//cdn.jsdelivr.net/npm/prismjs@1/components/prism-python.min.js"></script>
-  <script src="//cdn.jsdelivr.net/npm/prismjs@1/components/prism-java.min.js"></script>
-  <script src="//cdn.jsdelivr.net/npm/prismjs@1/components/prism-sql.min.js"></script>
-  <script src="//cdn.jsdelivr.net/npm/prismjs@1/components/prism-actionscript.min.js"></script>
-  <script src="//cdn.jsdelivr.net/npm/prismjs@1/components/prism-yaml.min.js"></script>
+  <script src="//cdn.jsdelivr.net/npm/prismjs@1/components/prism-python.js"></script>
+  <script src="//cdn.jsdelivr.net/npm/prismjs@1/components/prism-java.js"></script>
+  <script src="//cdn.jsdelivr.net/npm/prismjs@1/components/prism-sql.js"></script>
+  <script src="//cdn.jsdelivr.net/npm/prismjs@1/components/prism-actionscript.js"></script>
+  <script src="//cdn.jsdelivr.net/npm/prismjs@1/components/prism-yaml.js"></script>
   <script src="//unpkg.com/prismjs/components/prism-c.js"></script>
   <script src="//unpkg.com/prismjs/components/prism-clike.js"></script>
   <script src="//unpkg.com/prismjs/components/prism-cpp.js"></script>
